--- a/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.html
+++ b/src/app/catalog-page/catalog/catalog-filter/catalog-filter.component.html
@@ -1,10 +1,10 @@
 <div class="wrapper">
   <form class="filters-list">
 
-    <div class="filter">
-      <div class="title" (click)="showFullFilter(0)">
+    <div class="filter f-required">
+      <div class="filter-title" (click)="showFullFilter(0)">
         <p>Исходники работы</p>
-        <div class="btn-show-full" [ngClass]="{open: fliterOpen === 0}"></div>
+        <div class="filter-title-arrow" [ngClass]="{open: fliterOpen === 0}"></div>
       </div>
       <div class="filter-values f-types" [ngClass]="{open: fliterOpen === 0}">
         <section  class="filter-values-wrapper f-checkboxs">
@@ -18,48 +18,51 @@
       </div>
     </div>
 
-    <div class="filter">
-      <div class="title" (click)="showFullFilter(1)">
+    <div class="filter f-required">
+      <div class="filter-title" (click)="showFullFilter(1)">
         <p>Бюджет</p>
-        <div class="btn-show-full" [ngClass]="{open: fliterOpen === 1}"></div>
+        <div class="filter-title-arrow" [ngClass]="{open: fliterOpen === 1}"></div>
       </div>
       <div class="filter-values f-price" [ngClass]="{open: fliterOpen === 1}">
-        <div class="filter-section">
-          <label class="filter-text" for="price-mn">От</label>
-          <input
-            class="inputs"
-            matInput
-            number
-            placeholder="UAH"
-            [(ngModel)]="catalogFilters.minPrice"
-            (ngModelChange)="onFilterChange()"
-            type="text"
-            name="minPrice"
-            #typeMinPrice="ngModel">
+        <div class="filter-values-wrapper">
+          <div class="filter-section">
+            <label class="filter-text" for="price-mn">От</label>
+            <input
+              class="inputs"
+              matInput
+              number
+              placeholder="UAH"
+              [(ngModel)]="catalogFilters.minPrice"
+              (ngModelChange)="onFilterChange()"
+              type="text"
+              name="minPrice"
+              #typeMinPrice="ngModel">
+          </div>
+          <div class="filter-section">
+            <label class="filter-text" for="price-mx">До</label>
+            <input
+              class="inputs"
+              matInput
+              number
+              placeholder="UAH"
+              [(ngModel)]="catalogFilters.maxPrice"
+              (ngModelChange)="onFilterChange()"
+              type="text"
+              name="maxPrice"
+              #typeMaxPrice="ngModel">
+          </div>
         </div>
-        <div class="filter-section">
-          <label class="filter-text" for="price-mx">До</label>
-          <input
-            class="inputs"
-            matInput
-            number
-            placeholder="UAH"
-            [(ngModel)]="catalogFilters.maxPrice"
-            (ngModelChange)="onFilterChange()"
-            type="text"
-            name="maxPrice"
-            #typeMaxPrice="ngModel">
-        </div>
+
       </div>
     </div>
 
-    <div class="filter">
-      <div class="title" (click)="showFullFilter(2)">
+    <div class="filter f-required">
+      <div class="filter-title" (click)="showFullFilter(2)">
         <p>Срок выполнения</p>
-        <div class="btn-show-full" [ngClass]="{open: fliterOpen === 2}"></div>
+        <div class="filter-title-arrow" [ngClass]="{open: fliterOpen === 2}"></div>
       </div>
       <div class="filter-values f-term" [ngClass]="{open: fliterOpen === 2}">
-        <mat-radio-group class="filter-values-wrapper" [(ngModel)]="catalogFilters.maxTerm" (ngModelChange)="onFilterChange()"  name='maxTerm' #maxTerm="ngModel">
+        <mat-radio-group class="filter-values-wrapper f-radio" [(ngModel)]="catalogFilters.maxTerm" (ngModelChange)="onFilterChange()"  name='maxTerm' #maxTerm="ngModel">
           <mat-radio-button class="filter-text" value="">None</mat-radio-button>
           <mat-radio-button class="filter-text" value="1">Экспресс за 24 часа</mat-radio-button>
           <mat-radio-button class="filter-text" value="3">До 3 дней</mat-radio-button>
@@ -74,10 +77,10 @@
       </div>
     </div>
 
-    <div class="filter includes">
-      <div class="title" (click)="showFullFilter(3)">
+    <div class="filter f-required includes">
+      <div class="filter-title" (click)="showFullFilter(3)">
         <p>Сервис включает</p>
-        <div class="btn-show-full" [ngClass]="{open: fliterOpen === 3}"></div>
+        <div class="filter-title-arrow" [ngClass]="{open: fliterOpen === 3}"></div>
       </div>
       <div class="filter-values f-includes" [ngClass]="{open: fliterOpen === 3}">
         <section  class="filter-values-wrapper f-checkboxs">
@@ -90,6 +93,63 @@
           <div class="f-btn" (click)="showFullFilter(null)">Закрыть</div>
         </div>
       </div>
+    </div>
+
+    <div class="filter f-optional">
+      <div class="filter-title" (click)="showFullFilter(4)">
+        <p>фильтра поиска</p>
+        <div class="filter-title-arrow" [ngClass]="{open: fliterOpen === 4}"></div>
+      </div>
+      <div class="filter-values f-other" [ngClass]="{open: fliterOpen === 4}">
+        <div class="f-other-wrapper">
+          <h5>Продавец говорит</h5>
+          <section  class="filter-values-wrapper f-checkboxs">
+            <mat-checkbox class="filter-text"  [(ngModel)]="catalogFilters.LangRus" (ngModelChange)="onFilterChange()" name='commercial' #commercial="ngModel">Русский</mat-checkbox>
+            <mat-checkbox class="filter-text"  [(ngModel)]="catalogFilters.LangUkr"  (ngModelChange)="onFilterChange()" name='confidentiality' #confidentiality="ngModel">Украинский</mat-checkbox>
+            <mat-checkbox class="filter-text"  [(ngModel)]="catalogFilters.LangBr"  (ngModelChange)="onFilterChange()" name='agreement' #agreement="ngModel">Беларусский</mat-checkbox>
+          </section >
+        </div>
+
+        <div class="f-other-wrapper">
+          <h5>Продавец говорит</h5>
+          <section  class="filter-values-wrapper f-checkboxs">
+            <mat-checkbox class="filter-text"  [(ngModel)]="catalogFilters.LangRus" (ngModelChange)="onFilterChange()" name='commercial' #commercial="ngModel">Русский</mat-checkbox>
+            <mat-checkbox class="filter-text"  [(ngModel)]="catalogFilters.LangUkr"  (ngModelChange)="onFilterChange()" name='confidentiality' #confidentiality="ngModel">Украинский</mat-checkbox>
+            <mat-checkbox class="filter-text"  [(ngModel)]="catalogFilters.LangBr"  (ngModelChange)="onFilterChange()" name='agreement' #agreement="ngModel">Беларусский</mat-checkbox>
+          </section >
+        </div>
+        <div class="f-other-wrapper">
+          <h5>Продавец говорит</h5>
+          <section  class="filter-values-wrapper f-checkboxs">
+            <mat-checkbox class="filter-text"  [(ngModel)]="catalogFilters.LangRus" (ngModelChange)="onFilterChange()" name='commercial' #commercial="ngModel">Русский</mat-checkbox>
+            <mat-checkbox class="filter-text"  [(ngModel)]="catalogFilters.LangUkr"  (ngModelChange)="onFilterChange()" name='confidentiality' #confidentiality="ngModel">Украинский</mat-checkbox>
+            <mat-checkbox class="filter-text"  [(ngModel)]="catalogFilters.LangBr"  (ngModelChange)="onFilterChange()" name='agreement' #agreement="ngModel">Беларусский</mat-checkbox>
+          </section >
+        </div>
+        <div class="f-other-wrapper">
+          <h5>Продавец говорит</h5>
+          <section  class="filter-values-wrapper f-checkboxs">
+            <mat-checkbox class="filter-text"  [(ngModel)]="catalogFilters.LangRus" (ngModelChange)="onFilterChange()" name='commercial' #commercial="ngModel">Русский</mat-checkbox>
+            <mat-checkbox class="filter-text"  [(ngModel)]="catalogFilters.LangUkr"  (ngModelChange)="onFilterChange()" name='confidentiality' #confidentiality="ngModel">Украинский</mat-checkbox>
+            <mat-checkbox class="filter-text"  [(ngModel)]="catalogFilters.LangBr"  (ngModelChange)="onFilterChange()" name='agreement' #agreement="ngModel">Беларусский</mat-checkbox>
+          </section >
+        </div>
+        <div class="filter-btns">
+          <div class="f-btn" (click)="clearIncludes()">Очистить</div>
+          <div class="f-btn" (click)="showFullFilter(null)">Закрыть</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="filter-switch f-required">
+      <div class="pckg-swap ">
+        <input class="tgl tgl-swp" id="cb2" type="checkbox" [(ngModel)]="catalogFilters.online" (ngModelChange)="onFilterChange()" name="notificationsAll" #online="ngModel"/>
+        <label class="tgl-btn" for="cb2"></label>
+        <div class="filter-title">
+          <p>Сейчас онлайн</p>
+        </div>
+      </div>
+
     </div>
 
   </form>
