--- a/src/app/catalog-page/catalog/catalog-items/catalog-items.component.scss
+++ b/src/app/catalog-page/catalog/catalog-items/catalog-items.component.scss
@@ -62,8 +62,8 @@
       }
     }
     &__ava {
-      height: 130%;
-      width: auto;
+      height: 40px;
+      width: 40px;
       border-radius: 50%;
       overflow: hidden;
       position: relative;
