--- a/src/app/catalog-page/catalog/catalog.component.html
+++ b/src/app/catalog-page/catalog/catalog.component.html
@@ -13,7 +13,7 @@
   <app-filter [catalogFilters]="catalogFilters"></app-filter>
   <app-items></app-items>
 
-  <div class="pagination-wrapper">
+  <!-- <div class="pagination-wrapper">
 
     <ul  class="pagination" *ngIf="offersList">
       <li [ngClass]="{disabled:offersList.current_page === 1}" class="page-item previous-item">
@@ -39,7 +39,7 @@
       </li>
     </ul>
 
-  </div>
+  </div> -->
 
 </div>
 
