catalog (pagination  work)

--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/education-user-settings/education-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/education-user-settings/education-user-settings.component.html
@@ -82,10 +82,10 @@
 
             <div class="items" >
 
-                <div  class="img-item" *ngFor="let diplomaPhoto of allDiplomaPhotos[i]; let x = index">
+                <!-- <div  class="img-item" *ngFor="let diplomaPhoto of allDiplomaPhotos[i]; let x = index">
                   <button class="delete-file" (click)="deleteImg(i, x)"></button>
                   {{ diplomaPhoto }}
-                </div>
+                </div> -->
 
             </div>
 
