--- a/src/app/catalog-page/catalog/catalog-items/catalog-items.component.html
+++ b/src/app/catalog-page/catalog/catalog-items/catalog-items.component.html
@@ -1,7 +1,7 @@
 
 <div class="wrapper">
   <div class="cards-list" *ngIf="offersList">
-    <div class="card" *ngFor="let offer of offersList.data">
+    <div class="card" *ngFor="let offer of offersList.page.data">
       <div class="card-preview__bg">
         <img class="card-preview" (click)="openOffer(offer.id)" src="/assets/images/preview.png" [src]="'https://www.thecubetest.site/Backend/storage/app/' + offer.mainImage">
       </div>
