--- a/src/app/dashboard-page/dashboard-page.component.html
+++ b/src/app/dashboard-page/dashboard-page.component.html
@@ -21,7 +21,7 @@
   <div class="side-bar">
     <section class="avatar">
       <div class="lines"></div>
-      <img [src]="'https://www.thecubetest.site/Backend/storage/app/' + user.avatar" alt="avatar" />
+      <img [src]="user.avatar" alt="avatar" />
       <p class="name">{{ user.name }} {{ user.surname}}</p>
       <div class="raiting"></div>
     </section>
