--- a/src/app/chat/components/messager/messager.component.html
+++ b/src/app/chat/components/messager/messager.component.html
@@ -9,7 +9,7 @@
   </div>
   <div class="messager-wrap">
     <div class="previous-massages">
-      <app-message-list [chatRoom]="collocutorData"  *ngIf="collocutorData" [messagesList]="messagesList"></app-message-list>
+      <app-message-list [chatRoom]="collocutorData"  *ngIf="collocutorData" [messagesList]="messagesList" [collocutorData]="collocutorData"></app-message-list>
     </div>
     <form #message="ngForm" (ngSubmit)="sendMessage(message)" class="message-input">
       <div class="text-input">
