--- a/src/app/chat/components/chat-component/chat-component.html
+++ b/src/app/chat/components/chat-component/chat-component.html
@@ -5,8 +5,8 @@
   <section class="messager" *ngIf="collocutorData" >
     <app-messager *ngIf="collocutorData" [collocutorData]="collocutorData"></app-messager>
   </section>
-  <section class="collocutors-tools">
+  <section class="collocutors-tools" >
     <app-messager-tools *ngIf="chatType === 'projects'"></app-messager-tools>
-    <app-collocutor-information *ngIf="chatType === 'classic'"></app-collocutor-information>
+    <app-collocutor-information *ngIf="chatType === 'classic' && collocutorData" [collocutorData]="collocutorData"></app-collocutor-information>
   </section>
 </section>
