--- a/src/app/dashboard-page/dashboard-page.component.scss
+++ b/src/app/dashboard-page/dashboard-page.component.scss
@@ -15,6 +15,7 @@
     justify-content: space-between;
     width: 100%;
     height: 6.5%;
+    min-height: 70px;
     align-items: center;
     .logo {
       font-family: "Source Sans Pro", sans-serif;
