--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/main-user-settings/main-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/main-user-settings/main-user-settings.component.html
@@ -12,7 +12,7 @@
             <label for="file" class="img-wrapper">
               <div class="ava-block">
                 <div class="img-block">
-                    <img [src]="'https://www.thecubetest.site/Backend/storage/app/' + userSettingsModel.avatar" alt="">
+                    <img [src]="userSettingsModel.avatar" alt="">
                   </div>
                   <div class="sub-btn"></div>
               </div>
