--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/education-user-settings/education-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/education-user-settings/education-user-settings.component.html
@@ -34,7 +34,7 @@
                 <mat-select name="academicDegree" id="academicDegree"
                   [(ngModel)]="userSettings.education[i].academicDegree">
                   <ng-container *ngFor="let academicDegree of academicDegrees">
-                    <mat-option [value]="academicDegree">{{ academicDegree }}</mat-option>
+                    <mat-option [value]="academicDegree">{{ academicDegreesTranslations[academicDegree-1] }}</mat-option>
                   </ng-container>
                 </mat-select>
               </div>
@@ -80,15 +80,12 @@
               </div>
             </div>
 
-            <div class="items" >
-              <!-- *ngFor="let diplomaPhoto of arrayItem; let x = index" -->
-                <div  class="img-item" *ngFor="let diplomaPhoto of userSettings.education[i].diploma; let x = index">
-                  <!-- <p>{{userSettings.education[i].diplomaFiles}}</p> -->
-                  <img [src]="diplomaPhoto" height="300" />
-                  <button class="delete-file" (click)="deleteImg(i)"></button>
-                  <!-- {{ arrayItem.diplomaFiles }} -->
+            <div class="items">
+              <ng-container *ngFor="let diplomaPhoto of userSettings.education[i].diploma; let x = index">
+                <div  class="img-item" *ngIf="diplomaPhoto != null" >
+                  <img  [src]="diplomaPhoto" height="300" />
                 </div>
-
+              </ng-container>
             </div>
 
             <div class="add-photos">
@@ -103,7 +100,7 @@
           </div>
 
           <button type="button" class="delete-education">
-            <i class="material-icons" (click)="deleteEducation(i)">delete</i>
+            <i class="material-icons" (click)="deleteEducation(userSettings.education[i].id, i)">delete</i>
           </button>
         </div>
 
