--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/education-user-settings/education-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/education-user-settings/education-user-settings.component.scss
@@ -133,9 +133,6 @@
     &.hidden{
       height: 0;
       overflow: hidden;
-      .academicBlock{
-        display: none;
-      }
     }
   }
 
@@ -152,7 +149,7 @@
     width: 130%;
     left: 50%;
     transform: translateX(-50%);
-    background-color: rgb(162, 166, 173);
+    background-color: #F4F7FC;
   }
 }
 //--------------------------- selects styling -----------------------------
@@ -320,7 +317,7 @@ button {
   width: 100%;
   .img-item {
     width: 197px;
-    height: 197px;
+    height: 45px;
     margin-right: 3%;
     margin-bottom: 20px;
     position: relative;
@@ -366,5 +363,3 @@ button {
     padding: 2px;
   }
 }
-
-
