--- a/src/app/chat/components/show-uploaded-files/show-uploaded-files.component.scss
+++ b/src/app/chat/components/show-uploaded-files/show-uploaded-files.component.scss
@@ -15,6 +15,9 @@
   &:hover:after {
     color: #1666ea;
   }
+  &.active:after {
+    color: #1666ea;
+  }
 }
 
 .files-folder {
@@ -34,7 +37,9 @@
   box-shadow: 0px 9px 21px rgba(128, 152, 213, 0.1);
   border-radius: 8px;
   z-index: 5;
-
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 
   &:before {
     content: '';
@@ -73,6 +78,10 @@
     width: 13.4%;
   }
 
+  .list-wrap {
+    height: 100%;
+    overflow-y: auto;
+  }
   .list {
     display: flex;
     justify-content: space-between;
@@ -116,3 +125,4 @@
     }
   }
 }
+
