--- a/src/app/service-page/components/service-page/service-page.component.html
+++ b/src/app/service-page/components/service-page/service-page.component.html
@@ -2,6 +2,7 @@
 <app-categories-header></app-categories-header>
 
   <nav class="navigation_page" #stickyMenu [class.sticky] = "sticky">
+  <!-- <nav class="navigation_page" #stickyMenu [ngClass] = "{'sticky': sticky}"> -->
     <div class="wrapper">
       <ul>
         <li (click)="scrollTo('portfolio')">Портфолио</li>
