--- a/src/app/chat/components/messager/messager.component.html
+++ b/src/app/chat/components/messager/messager.component.html
@@ -19,9 +19,10 @@
       <div class="tools">
         <div>
           <app-emoji *ngIf="textinput"  [textinput]="textinput"></app-emoji>
-          <div class="file">
-            <label class="add-file" for="add-file"></label>
-            <input type="file" name="file-input" id="add-file">
+          <div class="file" (click)="openFilesUploader()">
+            <!-- <app-upload-file></app-upload-file> -->
+            <!-- <label class="add-file" for="add-file"></label>
+            <input type="file" name="file-input" id="add-file"> -->
           </div>
         </div>
         <button type="submit"  class="submit"></button>
