--- a/src/app/chat/components/messager/messager.component.scss
+++ b/src/app/chat/components/messager/messager.component.scss
@@ -58,37 +58,50 @@
       .file {
         position: relative;
         height: 20px;
-        label {
-          width: 20px;
-          height: 20px;
-          position: relative;
-          cursor: pointer;
+        cursor: pointer;
+        &:before {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          content: "\e911";
+          font-family: icoMoon;
+          font-size: 19px;
           color: #bfc5d1;
-          &:before {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            content: "\e911";
-            font-family: icoMoon;
-            font-size: 19px;
-          }
-          &:hover {
-            color: #278df3;
-          }
         }
+        &:hover:before {
+          color: #278df3;
+        }
+        // label {
+        //   width: 20px;
+        //   height: 20px;
+        //   position: relative;
+        //   cursor: pointer;
+        //   color: #bfc5d1;
+        //   &:before {
+        //     position: absolute;
+        //     width: 100%;
+        //     height: 100%;
+        //     content: "\e911";
+        //     font-family: icoMoon;
+        //     font-size: 19px;
+        //   }
+        //   &:hover {
+        //     color: #278df3;
+        //   }
+        // }
       }
-      input[type="file"] {
-        width: 0;
-        height: 0;
-        border: none;
-        font-size: 0;
-        position: absolute;
-        z-index: -1;
-        top: 0;
-        outline: none;
-        border: none;
-        box-shadow: none;
-      }
+      // input[type="file"] {
+      //   width: 0;
+      //   height: 0;
+      //   border: none;
+      //   font-size: 0;
+      //   position: absolute;
+      //   z-index: -1;
+      //   top: 0;
+      //   outline: none;
+      //   border: none;
+      //   box-shadow: none;
+      // }
       button[type="submit"] {
         width: 30px;
         height: 30px;
