--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/my-services-home/my-services-home.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/my-services-home/my-services-home.component.scss
@@ -22,7 +22,7 @@ section:not(.wrap) {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: flex-start;
-  overflow: auto;
+  overflow: hidden;
   margin-right: 5px;
 }
 .tabs-wrap {
@@ -74,6 +74,7 @@ section:not(.wrap) {
 .add-service {
   width: 17.6%;
   max-height: 243px;
+  min-height: 243px;
   background: #f4f7fc;
   border: 1px dashed #3c7eea;
   background: #ffffff;
@@ -90,6 +91,7 @@ section:not(.wrap) {
 .item {
   width: 17.6%;
   max-height: 243px;
+  min-height: 243px;
   background: #ffffff;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
   border-radius: 3px;
@@ -265,5 +267,33 @@ section:not(.wrap) {
       max-height: 40px;
       padding: 10px 50px;
     }
+  }
+}
+
+
+mat-tab-group ::ng-deep {
+  width: 100%;
+  height: 100%;
+  .mat-tab-body-content {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .mat-ink-bar{
+    background: #3C7EEA !important;
+    border-radius: 100px 100px 0px 0px;
+    height: 4px;
+
+  }
+  .mat-tab-header {
+    margin: 0 15px;
+  }
+  .mat-tab-body-wrapper {
+    margin-top: 27px;
+    height: 100%;
+    overflow: auto;
+  }
+
+  .mat-tab-body-content {
+    padding-right: 10px;
   }
 }
