--- a/src/app/shared/modules/user-header-menu/user-header-menu.component.scss
+++ b/src/app/shared/modules/user-header-menu/user-header-menu.component.scss
@@ -18,6 +18,7 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
+    overflow: hidden;
     position: relative;
     cursor: pointer;
     img {
